k8s/myflask-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myflask-deployment
  labels:
    app: myflask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myflask
  template:
    metadata:
      labels:
        app: myflask
    spec:
      containers:
      - name: myflask
        image: biennt/myflask
        ports:
        - containerPort: 5000
