k8s/unitflask-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unitflask-deployment
  labels:
    app: unitflask
spec:
  replicas: 2
  selector:
    matchLabels:
      app: unitflask
  template:
    metadata:
      labels:
        app: unitflask
    spec:
      containers:
      - name: unitflask
        image: biennt/unitflask
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: 100m
          requests:
            cpu: 50m
