k8s/myflask-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: myflask-svc
  labels:
    app: myflask
spec:
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  selector:
    app: myflask
