k8s/unitflask-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: unitflask-svc
  labels:
    app: unitflask
spec:
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  selector:
    app: unitflask
