k8s/myflask-ingress.yml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress
metadata:
   name: myflask-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
   rules:
   - host: myflask.com
     http:
       paths:
       - path: /
         backend:
           serviceName: myflask-svc
           servicePort: 80
