k8s/unitflask-ingress.yml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress
metadata:
   name: unitflask-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
   rules:
   - host: unitflask.bienlab.com
     http:
       paths:
       - path: /
         backend:
           serviceName: unitflask-svc
           servicePort: 80
